Test rename and improvements